    now changing the package name
  * [Christian] Applied Francisco Gimeno alias kikov supposed corrected patch
  * [Christian] Big renaming from sourceforge to gforge
  * [Christian] gforge-common and gforge-web-apache are now installable
  * [Christian] Added Jabber related French translation
  * [Christian] Added Jabber stuffs in local.inc.template
  * [Christian] Added ldap stuffs in gforge-web-apache config and template files 

 -- Christian Bayle <bayle@debian.org>  Sat,  7 Dec 2002 00:31:34 +0100

sourceforge (gforge-1) experimental; urgency=low

  * [Roland] Started the "gforge" branch, to temporarily host all the
    changes made by Tim Perdue (a.k.a. Bigdisk) in his Gforge fork.
    Hopefully, we'll eventually merge them into the trunk and drop that
    branch, but since his changes seem to be rather large, we can't do
    that instantly.

 -- Roland Mas <roland.mas@free.fr>  Wed, 27 Nov 2002 22:42:02 +0100

sourceforge (2.6-0+15) experimental; urgency=low

  * [Christian] Add the possibility to hide forum in news_show_latest
  * [Christian] Added the possibility of a language by theme customization
    and updated README.Custom
  * [Christian] Included full Spanish translation from Vicente Ruiz.  Thanks
    again
  * [Christian] Removed the unused categories column in
    www/admin/grouplist.php
  * [Christian] Added stats_getprojects_active_public function in
    www/include/features_boxes.php
  * [Christian] Applied Francisco Gimeno patch as is 

 -- Christian Bayle <bayle@debian.org>  Wed, 27 Nov 2002 22:08:19 +0100

sourceforge (2.6-0+14) experimental; urgency=low

  * [Roland] Uuencoded all binary files in the source package, so that
    dpkg-source can build a .diff.gz from the .orig.tar.gz.  debian/rules
    changed accordingly to uudecode the *.uu files at build time, and to
    remove the resulting files at clean time.
  * [Christian] Made trove cat more editable
  * [Roland] Added integrity constraints between the tables related to the