@@ -22,8 +22,8 @@ use POSIX qw( strftime );
 my ($year, $month, $day, $day_begin, $day_end);
 my ($group, $histline, $daily_log_file, $key, $verbose);
 my $verbose = 1;
-my $base_log_dir = "/var/log/sourceforge/cvs";
-my $cvsroot = "/var/lib/sourceforge/chroot/cvsroot";
+my $base_log_dir = "/var/log/gforge/cvs";
+my $cvsroot = "/var/lib/gforge/chroot/cvsroot";
 
 $|=0 if $verbose;
 $|++;
