@@ -24,7 +24,7 @@
 # 'symbolic_name' 'path_to_the_actual_repository'
 %CVSROOT = (
 # Uncomment next line and modify the path if you have only one CVS repository.
-	    'Sourceforge-CVS' => '/var/lib/sourceforge/chroot/cvsroot',
+	    'Sourceforge-CVS' => '/var/lib/gforge/chroot/cvsroot',
 	    );
 
 # This tree is enabled by default when
