@@ -1,10 +1,10 @@
-Sourceforge for Debian
+GForge for Debian
 ======================
 
 Status
 ------
 Want to know what the status of this package is?  Read
-/usr/share/doc/sourceforge/TODO.Debian or (even better)
+/usr/share/doc/gforge/TODO.Debian or (even better)
 <http://savannah.gnu.org/support/?group_id=259>.  If you miss a
 feature, or find a bug, or want to help, don't hesitate to contact me
 (Roland Mas <lolando@debian.org>) .  Plenty of features are missing,
@@ -12,7 +12,7 @@ I'm working on some, but if you don't tell me which ones you miss the
 most I might process them in the wrong order for you.
 
   Please read the bug reports on the Debian bug-tracking system (at
-<URL:http://bugs.debian.org/cgi-bin/pkgreport.cgi?pkg=sourceforge>)
+<URL:http://bugs.debian.org/cgi-bin/pkgreport.cgi?pkg=gforge>)
 before submitting new ones.  Be warned that bug reports describing a
 problem precisely and/or offering a solution will probably be
 processed faster :-)
@@ -29,22 +29,22 @@ Contributor_Guide.html, INSTALL, and AUTHORS.
 
 Installation notes
 ------------------
-  Sourceforge is a big piece of software.  It's far-reaching.  It
+  GForge is a big piece of software.  It's far-reaching.  It
 fiddles with many different parts of the system.  As automated as I
 have tried to make its installation, there are still things that need
 to be done by hand, maybe even by a system administrator.
 
-  First, you'll need a hostname.  Get the sourceforge.<your-domain>
+  First, you'll need a hostname.  Get the gforge.<your-domain>
 DNS name to be created, pointing on the IP address of the host you're
-installing Sourceforge on.  The "sourceforge" part isn't required, you
+installing GForge on.  The "gforge" part isn't required, you
 can call it however you like.  However, I'll assume you chose
-"sourceforge" from now on; substitute as needed.
+"gforge" from now on; substitute as needed.
 
   If you want to use the Apache virtual hosting service, you'll even
 need a delegation of a subdomain.  Get your system administrator to
-delegate you the SOA for the sourceforge.<your-domain> subdomain.
-This will allow Sourceforge to create new hostnames for projects when
-needed (foo.sourceforge.<your-domain>, for instance), as well as some
+delegate you the SOA for the gforge.<your-domain> subdomain.
+This will allow GForge to create new hostnames for projects when
+needed (foo.gforge.<your-domain>, for instance), as well as some
 hostnames needed by the system (for mailing-lists or CVS, for
 instance).
 
@@ -55,9 +55,9 @@ you'll be able to modify the entries in it.  I would advise not to in
 any case, since it would make the data contained in the LDAP directory
 inconsistent with the real data stored in the PostgreSQL database.
 
-  You'll need a configured MTA for Sourceforge.  Depending on whether
-the Sourceforge users are local or remote, you might need to set up a
-smarthost or something else.  Sourceforge depends on a working mail
+  You'll need a configured MTA for GForge.  Depending on whether
+the GForge users are local or remote, you might need to set up a
+smarthost or something else.  GForge depends on a working mail
 system, and you won't be able to create user accounts without it.  I'm
 not sure yet what advanced tricks need to be done with the MTA.  There
 might be some stuff to do with virtual domains for mailing-lists or
@@ -70,13 +70,13 @@ professional one or your personal one (or the one in your company).
 Otherwise, just use mod-ssl-makecert as advised during the
 configuration phase, and get your own custom certificate.
 
-  Do *not* delete the /etc/sourceforge/*.template files.  They are
+  Do *not* delete the /etc/gforge/*.template files.  They are
 needed.  Do not alter them either unless you *know* what you're doing.
 
 
 Adminning notes
 ---------------
-  Once Sourceforge is setup, it pretty much runs by itself.  There
+  Once GForge is setup, it pretty much runs by itself.  There
 should be relatively few things to do for the administrator.  The
 following are random notes trying to document them.
 
@@ -88,9 +88,9 @@ permissions on the `siteadmin' project) via the web interface.
   If you need to add skills to the database after installation, you
 can use the sf-add-skill script.  Give it a skill (or a list of
 skills) and it'll insert it into the databse.  This script is located
-in /usr/lib/sourceforge/bin/.
+in /usr/lib/gforge/bin/.
 
-  If you would like to add a theme to your Sourceforge, you'll first
+  If you would like to add a theme to your GForge, you'll first
 have to compose it.  Please refer to README.Themes.
 
   Other customisations are described in README.Custom.
@@ -98,9 +98,9 @@ have to compose it.  Please refer to README.Themes.
 
 Thanks
 ------
-  Apart from the Sourceforge crew at VA Linux, who did (and probably
+  Apart from the GForge crew at VA Linux, who did (and probably
 still do) a great job with SF, I'd like to send my thanks to Guillaume
-Morin, who wrote a very thorough Sourceforge installation guide.  That
+Morin, who wrote a very thorough GForge installation guide.  That
 guide gives step-by-step instructions for the installation procedure,
 and a big part of the packaging task was to turn these instructions
 into automated scripts.  Even if this package has evolved a lot since
