@@ -7,6 +7,7 @@ Standards-Version: 3.5.7
 
 Package: gforge
 Architecture: all
+Pre-Depends: gforge-sourceforge-transition
 Depends: debconf (>= 0.5.00), gforge-common (= ${Source-Version}), gforge-web-apache | gforge-web, gforge-db-postgresql | gforge-db, gforge-mta-exim | gforge-mta, gforge-shell-ldap | gforge-shell, gforge-cvs, gforge-ftp-proftpd | gforge-ftp, gforge-ldap-openldap | gforge-ldap, gforge-dns-bind9 | gforge-dns, gforge-lists-mailman | gforge-lists
 Description: Collaborative development tool - meta-package
  GForge provides many tools to help collaboration in a
@@ -20,6 +21,9 @@ Description: Collaborative development tool - meta-package
 Package: gforge-common
 Architecture: all
 Depends: debconf (>= 0.5.00)
+Replaces: sourceforge-common (>> 2.6-0+11)
+Provides: gforge-sourceforge-transition
+Conflicts: gforge-sourceforge-transition
 Description: Collaborative development tool - shared files
  GForge provides many tools to help collaboration in a
  development project, such as bug-tracking, task management,
@@ -32,7 +36,7 @@ Description: Collaborative development tool - shared files
 
 Package: gforge-web-apache
 Architecture: all
-Depends: gforge-common, gforge-db-postgresql | gforge-db | sourceforge-db-postgresql | sourceforge-db , apache (>= 1.3.9) | apache-ssl (>= 1.3.9), libapache-mod-ssl | apache-ssl, php4, php4-cgi, php4-pgsql, php4-gd, php4-ldap, php4-mcrypt, libmcrypt4 (>=2.4.22-2), perl, perl-suid, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 0.5.00), slapd (>= 2.0.23-3), cronolog
+Depends: gforge-common, gforge-db-postgresql | gforge-db, apache (>= 1.3.9) | apache-ssl (>= 1.3.9), libapache-mod-ssl | apache-ssl, php4, php4-cgi, php4-pgsql, php4-gd, php4-ldap, php4-mcrypt, libmcrypt4 (>=2.4.22-2), perl, perl-suid, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 0.5.00), slapd (>= 2.0.23-3), cronolog
 Replaces: sourceforge-web-apache (>> 2.6-0+11)
 Provides: gforge-web
 Conflicts: gforge-web
@@ -49,7 +53,7 @@ Description: Collaborative development tool - web part (using Apache)
 Package: gforge-db-postgresql
 Architecture: all
 Depends: gforge-common, postgresql (>= 7.1.2), perl, libdbi-perl, libdbd-pg-perl, libmime-base64-perl, libhtml-parser-perl, debianutils (>= 1.7), debconf (>= 0.5.00), php4, php4-cgi, php4-pgsql
-Replaces: sourceforge-db-postgresql
+Replaces: sourceforge-db-postgresql (>> 2.6-0+11)
 Provides: gforge-db
 Conflicts: gforge-db
 Description: Collaborative development tool - database (using PostgreSQL)
@@ -143,8 +147,8 @@ Package: gforge-ldap-openldap
 Architecture: all
 Depends: gforge-common, gforge-db-postgresql | gforge-db, perl, libdbi-perl, libdbd-pg-perl, debianutils (>= 1.7), debconf (>= 0.5.00), slapd (>= 2.0.23-3), libnss-ldap (>=184-1), ldap-utils
 Replaces: sourceforge-ldap-openldap (>> 2.6-0+11)
-Provides: gforge-ldap
-Conflicts: sourceforge-ldap
+Provides: gforge-ldap,sourceforge-ldap
+Conflicts: gforge-ldap,sourceforge-ldap
 Description: Collaborative development tool - LDAP directory (using OpenLDAP)
  GForge provides many tools to help collaboration in a
  development project, such as bug-tracking, task management,
@@ -183,3 +187,10 @@ Description: Collaborative development tool - mailing-lists (using Mailman)
  integrated into one web site and managed via a nice web interface.
  .
  This package controls the interaction of GForge and Mailman.
+
+Package: gforge-sourceforge-transition
+Architecture: all
+Depends: sourceforge-common, sourceforge-db-postgresql
+Provides: gforge-sourceforge-transition
+Description: gforge to sourceforge data transition
+ This package will move data from your sourceforge package to your gforge package
