@@ -6,7 +6,7 @@
 #
 use DBI;
 
-require("/usr/lib/sourceforge/lib/include.pl");  # Include all the predefined functions
+require("/usr/lib/gforge/lib/include.pl");  # Include all the predefined functions
 
 my $ssh_array = ();
 
